--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,8 @@
     <color name="color_on_surface">@color/black</color>
     <color name="color_on_error">@color/white</color>
 
+    <color name="mtrl_textinput_default_box_stroke_color">@color/color_secondary</color>
+
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
