--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,8 @@
         app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
         app:layout_constraintBottom_toTopOf="@id/main_olvidar_password"
         android:text="@string/main_registro"
+        app:iconPadding="40dp"
+        app:iconGravity="textStart"
         app:icon="@drawable/ic_baseline_person_add_alt_1_24"
         app:cornerRadius="15dp"
         app:strokeColor="@color/color_secondary"
@@ -62,6 +64,8 @@
         app:layout_constraintBottom_toTopOf="@id/main_btn_registro"
         android:text="@string/main_login"
         app:icon="@drawable/ic_baseline_login_24"
+        app:iconPadding="40dp"
+        app:iconGravity="textStart"
         app:cornerRadius="15dp"
         app:strokeColor="@color/color_secondary"
         app:strokeWidth="2dp"
