--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,14 +8,13 @@
         <item name="android:statusBarColor">@color/transparent</item>
         <!-- Booleano false si el fondo es oscuro o true si el fondo es claro-->
 
-
         <!-- DIVIDER-->
         <item name="android:navigationBarDividerColor">@color/color_secondary</item>
         <!-- Navigation bar -->
         <item name="android:navigationBarColor">@color/transparent</item>
 
 
-          <!--<item name="android:windowLightStatusBar">true</item>-->
+        <!--<item name="android:windowLightStatusBar">true</item>
         <item name="android:windowLightNavigationBar">true</item>-->
     </style>
 
@@ -38,13 +37,25 @@
 
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/color_surface</item>
+        <!--<item name="android:windowLightStatusBar">true</item>-->
+        <item name="android:navigationBarColor">@color/color_surface</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightNavigationBar">true</item>
         <!-- Customize your theme here. -->
 
         <!-- Transitions -->
         <item name="android:windowEnterTransition">@transition/fade_in</item>
-        <item name="android:windowExitTransition">@transition/slide_end</item>
     </style>
 
     <style name="Base.MaterialThemeBuilder" parent="Theme.MaterialComponents.DayNight.NoActionBar"></style>
+
+    <style name="Base.MyTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Base.MyTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Base.MyTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
