--- a/app/src/main/res/layout/activity_planeta.xml
+++ b/app/src/main/res/layout/activity_planeta.xml
@@ -6,36 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".PlanetaActivity">
 
-    <LinearLayout
-        android:id="@+id/planeta_ll"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/planeta_btn_add"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:padding="20dp"
+        android:text="Añadir fragmento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
 
-        <fragment
-            android:name="com.codigonline.cursokotlin.PlanetaFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            tools:layout="@layout/fragment_planeta" />
-        <fragment
-            android:name="com.codigonline.cursokotlin.PlanetaFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            tools:layout="@layout/fragment_planeta" />
+        />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/planeta_btn_replace"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:padding="20dp"
+        android:text="Añadir fragmento"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/planeta_btn_add"
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+        />
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/planeta_ll"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/planeta_btn_replace"
 
-    </LinearLayout>
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
