--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegistroActivity">
+    tools:context=".ui.RegistroActivity">
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/registro_guideH9"
         android:layout_width="wrap_content"
