--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -2,12 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".ui.Planeta.PruebaFragment">
+    android:layout_height="match_parent"
+    tools:context=".ui.B.BFragment"
+    android:background="@color/color_surface">
 
     <TextView
+        android:id="@+id/fragment_b_text_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hola Prueba Frament" />
-
+        android:layout_height="wrap_content"
+        />
 </FrameLayout>
