--- a/app/src/main/res/layout/fragment_planeta.xml
+++ b/app/src/main/res/layout/fragment_planeta.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlanetaFragment">
+    tools:context=".ui.Planeta.PlanetaFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
