--- a/navigation_app/app/src/main/res/layout/fragment_init.xml
+++ b/navigation_app/app/src/main/res/layout/fragment_init.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InitFragment">
+    tools:context=".ui.fragments.InitFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/init_guidelineV1"
