--- a/navigation_app/app/src/main/res/layout/fragment_productos.xml
+++ b/navigation_app/app/src/main/res/layout/fragment_productos.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductosFragment">
+    tools:context=".ui.fragments.ProductosFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/productos_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hello productos" />
-
+        tools:listitem="@layout/item_producto_recycler_view"
+        android:layout_margin="5dp"
+        />
 </FrameLayout>
