--- a/navigation_app/app/src/main/res/layout/activity_main.xml
+++ b/navigation_app/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,14 @@
         android:visibility="gone"
         />
 
-    <include layout="@layout/navhost_layout" />
+    <include layout="@layout/navhost_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
