--- a/navigation_app/app/src/main/res/layout/fragment_productos.xml
+++ b/navigation_app/app/src/main/res/layout/fragment_productos.xml
@@ -1,9 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.ProductosFragment">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/productos_guide_V9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/productos_guide_H95"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.95"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/productos_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/productos_guide_H95"
+        app:layout_constraintEnd_toStartOf="@id/productos_guide_V9"
+        android:src="@drawable/ic_baseline_add_24"
+        android:contentDescription="@string/add_nuevo_producto" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/productos_recycler_view"
@@ -11,5 +35,9 @@
         android:layout_height="match_parent"
         tools:listitem="@layout/item_producto_recycler_view"
         android:layout_margin="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
