--- a/navigation_app/app/src/main/res/layout/fragment_login.xml
+++ b/navigation_app/app/src/main/res/layout/fragment_login.xml
@@ -116,7 +116,7 @@
             android:id="@+id/main_tie_email"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="textPersonName"
+            android:inputType="textEmailAddress"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
